# TradeBot

./: CHANGELOG.md  Dockerfile.manager  Dockerfile.ui  Dockerfile.worker  README.md  docker-compose.swarm.yml  docker-compose.yml  nginx.conf  pyproject.toml
.github/: commit-conventions.md  copilot-instructions.md
.github/agents/: angular-developer.agent.md  angular-ui.agent.md  python-backend.agent.md  python-developer.agent.md  system-architect.agent.md  trading-strategy.agent.md
.github/instructions/: developer.instructions.md
.github/prompts/: create-feature-branch.prompt.md  create-pr-to-development.prompt.md  pre-pr-quality-check.prompt.md
.github/skills/: exchange-integration.skill.md
.github/workflows/: docker-release-development.yml  docker-release-main.yml  manual-docker-release.yml  pr-gated-ci.yml
manager/: app.py  config.py  constants.py  models.py
manager/api/: __init__.py  auth.py  bots.py  deps.py  diagnostics.py  exchanges.py  news_settings.py  settings.py  signals.py  wallet.py  workers.py  ws.py
manager/database/: __init__.py  connection.py  repositories.py  schema.py
manager/exchanges/: __init__.py  base.py  registry.py
manager/services/: __init__.py  (+8 more)
services/: __init__.py
shared/: __init__.py  constants.py
tests/: test_bitvavo_client.py  test_budget_trend_and_news_allowlist.py  test_exchange_balances.py  test_rate_limiter.py  test_services.py  test_strategies.py  test_worker_restart_resume.py
ui/: README.md  angular.json  package-lock.json  package.json
worker/: __init__.py  app.py  bot_runner.py  manager_client.py
(+89 files in other folders)
